# openGauss-embedded

./: .gitignore  CMakeLists.txt  Dockerfile_cli  Dockerfile_functest  LICENSE  Makefile  README.en.md  README.md  VERSION.h  cmake_uninstall.cmake.in  testshell.sh
dependency/GmSSL/: .gitignore  CMakeLists.txt
dependency/GmSSL/include/gmssl/: export.h  sha2.h  sm3.h  sm4.h
dependency/GmSSL/src/: rdrand.c  sha256.c
dependency/Huawei_Secure_C/src/: CMakeLists.txt  fscanf_s.c  fwscanf_s.c  memcpy_s.c  memmove_s.c  scanf_s.c  sprintf_s.c  sscanf_s.c  swprintf_s.c  swscanf_s.c  vfscanf_s.c  vfwscanf_s.c  vscanf_s.c  vsprintf_s.c  vsscanf_s.c  vswprintf_s.c  vswscanf_s.c  vwscanf_s.c  wscanf_s.c
dependency/libpg_query/: CMakeLists.txt  README.md  pg_functions.cpp  postgres_parser.cpp  scan.l  src_backend_nodes_makefuncs.cpp  src_backend_parser_gram.cpp  src_backend_parser_scan.cpp
dependency/libpg_query/grammar/: grammar.cpp  grammar.hpp  grammar.y  statements.list
dependency/libpg_query/grammar/keywords/: reserved_keywords.list  unreserved_keywords.list
dependency/libpg_query/grammar/statements/: alter_table.y  cagg_policy.y  comment.y  create.y  drop.y  explain.y  role.y  select.y  synonym.y  variable_show.y
dependency/libpg_query/grammar/types/: alter_table.yh  cagg_policy.yh  comment.yh  create.yh  role.yh  select.yh  variable_show.yh
dependency/libpg_query/include/: pg_functions.hpp  postgres_parser.hpp
dependency/libpg_query/include/nodes/: lockoptions.hpp  makefuncs.hpp  nodes.hpp  parsenodes.hpp
dependency/libpg_query/include/parser/: gram.hpp  kwlist.hpp
dependency/utf8proc/: CMakeLists.txt  utf8proc.cpp  utf8proc_wrapper.cpp
dependency/utf8proc/include/: utf8proc.hpp  utf8proc_wrapper.hpp
examples/example-c/: CMakeLists.txt  example_c.c  example_prepared_c.c
examples/example-cpp/: CMakeLists.txt  example_cc.cpp  example_prepared_cc.cpp
examples/example-kv/: CMakeLists.txt  example_kv.c  example_kv.cpp
interface/c/: CMakeLists.txt  intarkdb_sql.h
interface/jdbc/: CMakeLists.txt  README.md  org_intarkdb_core_IntarkdbNative.c  org_intarkdb_core_IntarkdbNative.h
interface/rust/ncti-orm/: Cargo.toml
interface/rust/ncti-orm/codegen/: Cargo.toml
interface/rust/ncti-orm/interface/: Cargo.toml  README.md  build.rs
interface/rust/ncti-orm/macro_driver/: Cargo.toml
interface/rust/ncti-orm/src/: db.rs  main.rs
src/compute/kv/: CMakeLists.txt  intarkdb_kv-c.cpp  intarkdb_kv.h  intarkdb_kv.hpp  kv_connection.cpp  kv_connection.h
src/compute/sql/: .clang-format  .gitignore  CMakeLists.txt  README.md
src/compute/sql/binder/: alter_table_info.cpp  bind_alter.cpp  bind_copy.cpp  bind_create.cpp  bind_create_index.cpp  bind_create_view.cpp  bind_ctas.cpp  bind_delete.cpp  bind_drop.cpp  bind_expression.cpp  bind_insert.cpp  bind_interval.cpp  bind_role.cpp  bind_select.cpp  bind_set.cpp  bind_show.cpp  bind_synonym.cpp  bind_table_ref.cpp  bind_update.cpp  binder.cpp
src/compute/sql/catalog/: catalog.cpp  column.cpp  column_info.cpp  default_views.cpp  schema.cpp  table_info.cpp
src/compute/sql/common/: compare_type.cpp  csv_util.cpp  default_value.cpp  distinct_keys.cpp  exception.cpp  logic_op_type.cpp  math_op_type.cpp  record.cpp  record_batch.cpp  record_iterator.cpp  record_streaming.cpp  row_container.cpp  stat.cpp  strerror.cpp  string_util.cpp
src/compute/sql/datasource/: table_datasource.cpp
src/compute/sql/function/: cast_rule.cpp  function.cpp  sql_function.cpp
src/compute/sql/main/: base_storage.cpp  connection.cpp  database.cpp  (+1 more)
src/interface/sqlite3_api_wrapper/: CMakeLists.txt  sqlite3_api_wrapper.c  sqlite3_api_wrapper.cpp
src/network/: CMakeLists.txt
src/network/common/: CMakeLists.txt  srv_def.h
src/network/doc/: 方案文档.md
src/network/login/: CMakeLists.txt  login.c  login.h
src/network/network/: CMakeLists.txt  cs_ipc.c  cs_ipc.h  cs_packet.c  cs_packet.h  cs_pipe.c  cs_pipe.h  cs_tcp.c  cs_tcp.h  cs_uds.c  cs_uds.h
src/network/protocol/: CMakeLists.txt  protocol.cpp  protocol.h
src/network/server/: CMakeLists.txt  server_config.json  srv_agent.c  srv_handle.cpp  srv_handle.h  srv_instance.c  srv_instance.h  srv_interface.c  srv_interface.h  srv_lsnr.c  srv_param.c  srv_param.h  srv_reactor.c  srv_reactor.h  srv_session.c  srv_session.h  srv_session_base.c  srv_session_base.h
src/storage/: CMakeLists.txt  db_handle.h  storage.c  storage.h
src/storage/gstor/: CMakeLists.txt  gstor_executor.c  gstor_executor.h  gstor_handle.c  gstor_handle.h  gstor_instance.h  gstor_param.c  gstor_param.h  gstor_rm.c  gstor_rm.h  gstor_sga.c  gstor_sga.h  gstor_sys_def.c  gstor_sys_def.h
src/storage/kv_executor/: CMakeLists.txt  gstor_adpt.h  kv_executor.c  kv_executor.h
src/storage/relational_executor/: CMakeLists.txt  rela_executor.h
src/utils/: CMakeLists.txt  util_defs.h  util_error.c  util_error.h
tools/: CMakeLists.txt
tools/cli_common/: CMakeLists.txt  assist.cpp  assist.h  cli_util.cpp
tools/dependency/cJSON/: CMakeLists.txt
tools/intarkdb_cli/: CMakeLists.txt  assist.cpp  assist.h  cli_util.cpp  cli_util.h  cmd.cpp  cmd.h  kv_operator.cpp  kv_operator.h  main.cpp
tools/intarkdb_server/: CMakeLists.txt  server.c  server_config.json  server_test.c
tools/local-db/: CMakeLists.txt  server.c
tools/local-server/: CMakeLists.txt  ctrl_server.sh  server.c
tools/pressure_test/: CMakeLists.txt  README.md  demo.c  embedded_test_prepare.sh  embedded_test_start.sh  embedded_test_stop.sh  pressure_test.c  sqlite_test.c  sqlite_test_start.sh  sqlite_test_stop.sh
tools/rust-gstor/: build.rs
tools/rust-gstor-multithreading/: Cargo.toml
tools/rust-gstor-multithreading/src/: main.rs
tools/rust-gstor/src/: main.rs
tools/rust-memory-allocator/: .gitignore  Cargo.toml  README.md
tools/rust-memory-allocator/src/: CMakeLists.txt  lib.rs  main.c  main.h
tools/shell_tools/: git_add_tag.sh
tools/sqlite3-api-test/: CMakeLists.txt  sqlite3_api_test.c
tools/tools_dependency/: CMakeLists.txt
tools/tools_dependency/cJSON/: project_include.cmake
tools/tools_dependency/linenoise-ng/: CMakeLists.txt
(+774 files in other folders)
