add_subdirectory(cli_common)
add_subdirectory(dependency)
IF (ENABLE_PG_QUERY)
    add_subdirectory(intarkdb_cli)
    add_subdirectory(sqlite3-api-test)
    if(NOT MSVC)
        #add_subdirectory(pressure_test)
        if (NOT ((${OS_ARCH} STREQUAL "arm32")))
            add_subdirectory(local-db)
        endif()
        if (NOT ANDROID)
            add_subdirectory(intarkdb_server)
        endif()
    endif(MSVC)
ENDIF()